2005-05-29  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/bar-line.cc (print): don't round barlines; this produces
	odd aliasing effects in Acroread.

	* lily/timing-engraver.cc (process_music): robustness fix.

	* lily/context-def.cc (filter_engravers): bugfix.

2005-05-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lilypond.rc.in: Add ly-icon.

	* lily/GNUmakefile: 
	* Documentation/pictures/GNUmakefile (OUT_DIST_FILES): Add ly-icon
	rules.

2005-05-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/stencil-scheme.cc (LY_DEFINE): ly:stencil-in-color

	* ps/music-drawing-routines.ps: 

	* scm/output-ps.scm: remove draw ez_ball.

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	EasyNotation context definition.

	* lily/easy-notation.cc (brew_ez_stencil): new file. Use
	Text_interface and color for making easy note heads.

	* lily/stencil.cc (with_color): new function.

	* ps/music-drawing-routines.ps: remove draw_zigzag_line

	* lily/line-spanner.cc (zigzag_stencil): rewrite to use draw-line
	output routine. Zigzag now works in SVG too.

	* scm/output-tex.scm (filledbox): idem.

	* scm/output-svg.scm (filledbox): idem.

	* scm/output-ps.scm (lily-def): remove horizontal-line. 

	* lily/lookup.cc (horizontal_line): use draw-line. 

	* lily/system-start-delimiter.cc: remove old staff bracket code.

	* mf/feta-haak.mf: further tweaks.

	* lily/system-start-delimiter.cc (staff_bracket): use glyphs.

	* mf/feta-generic.mf: include feta-haak.

	* mf/feta-haak.mf: rewrite. Make separate glyphs for the tips 

	* scm/framework-ps.scm (write-preamble): only load fonts if their
	filename is a string. 

2005-05-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/output-svg.scm (circle): support circle.
	(bracket): stub for bracket.

	* scripts/lilypond-book.py (main): make sure --psfonts warning is
	correct.

2005-05-26  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond.tely, advanced-notation.itely,